--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   },
   "devDependencies": {
     "jest": "^23.4.2"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   }
 }
